Implementando cadastro do conteúdo do curso

--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -1,1 +1,33 @@
-<p>conteudo-curso works!</p>
+<div class="container">
+    <div class="sub-container">
+      <h5>Adicionar conteúdo do curso</h5>
+      <div class="form-curso">
+        <form>
+          <div class="inputs">
+            <label>
+              Titulo do conteúdo do Curso:
+              <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="tituloConteudo">
+            </label>
+  
+            <label>
+              Conteúdo Principal:
+              <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="conteudoPrincipal">
+            </label>  
+  
+            <div class="custom-file">
+              Foto:
+              <input id="customFile" type="file" class="custom-file-input" id="customFile" (change)="arquivoSelecionado($event)">
+              <label class="custom-file-label" for="customFile">foto</label>
+            </div>
+  
+          </div>
+          <div class="controles">
+            <p class="link" [routerLink]="['/cursos']">Voltar</p>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/cursos']">Salvar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  
+  </div>
+  
