--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -6,7 +6,7 @@
           <div class="inputs">
             <label>
               Titulo do conteúdo do Curso:
-              <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="tituloConteudo">
+              <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="titulo">
             </label>
   
             <label>
