Trazendo o conteúdo do curso que foi comprado para o componente curso-aprendizado

--- a/src/app/components/entidades/aprendizado/aprendizado.component.html
+++ b/src/app/components/entidades/aprendizado/aprendizado.component.html
@@ -18,7 +18,7 @@
         <div class="card-body">
 
           <div class="infos">
-            <h5 class="card-title" [routerLink]="['/curso-aprendizado']">{{curso.titulo}}</h5>
+            <h5 class="card-title" (click)="enviarCurso(curso)" [routerLink]="['/curso-aprendizado']">{{curso.titulo}}</h5>
             <p class="card-text">{{curso.descricao}}</p>
           </div>
 
