--- a/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
+++ b/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
@@ -4,6 +4,12 @@
     </div>
 </div>
 
+<ul *ngFor="let m of modulo">
+    <li>{{m.titulo}}</li>
+    <li>{{m.conteudoPrincipal}}</li>
+    <img src="{{urlImagem}}{{m.imagem}}" alt="">
+</ul>
+
 <div class="video-curso">
     <youtube-player 
         videoId="9SGDpanrc8U" 
