Implementando video do yt de forma dinâmica com a API do youtube

--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -13,6 +13,11 @@
               Conteúdo Principal:
               <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="conteudoPrincipal">
             </label>  
+
+            <label>
+              ID vídeo do youtube:
+              <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="videoId">
+            </label> 
   
             <div class="custom-file">
               Foto:
