implementando layout modulo curso-aprendizado

--- a/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.css
+++ b/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.css
@@ -1,39 +1,3 @@
-.aproveite {
-    margin-top: 20px;
-    background-color: #1C1D1F;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.seu-curso {
-    cursor: pointer;
-    font-size: 40px;
-    font-family: 'Montserrat';
-    color: white;
-}
-
-.seu-curso:hover {
-    color:#A435F0;
-}
-
-.video-curso {
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.conteudo-principal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.cont-curso {
-    margin: 30px;
-    font-family: 'Montserrat';
-    font-size: 30px;
+.tab{
+    color: pink;
 }
