Implementado os atributos manchete e biografia no cadastro do usuário

--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -14,6 +14,14 @@
             <input type="text" name="novoUsuario" id="usuario" placeholder="" [(ngModel)]="email">
         </label>
         <label>
+            Manchete:
+            <input type="text" name="novoUsuario" id="usuario" placeholder="" [(ngModel)]="manchete">
+        </label>
+        <label>
+            Biografia:
+            <textarea class="form-control" name="requisitos" id="exampleFormControlTextarea1" [(ngModel)]="biografia" rows="4"></textarea>
+        </label>
+        <label>
             Senha:
             <input type="password" name="senha" id="senha" placeholder="" [(ngModel)]="senha">
         </label>
