--- a/src/app/components/entidades/usuario-details/usuario-details.component.html
+++ b/src/app/components/entidades/usuario-details/usuario-details.component.html
@@ -10,7 +10,8 @@
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{usuario.nome}} {{usuario.sobrenome}}</h5>
             <p class="mb-1">{{usuario.email}}</p>
-            <p class="mb-1"></p>
+            <p class="mb-1">{{usuario.manchete}}</p>
+            <p class="mb-1">{{usuario.biografia}}</p>
           </div>
   
           <div class="sobre">
