--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.css
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.css
@@ -115,3 +115,25 @@ article form .controles{
     justify-content: space-between;
     margin-bottom: 0;
 }
+
+
+form textarea{
+    color: #000;
+    margin: 5px auto;
+    width: 100%;
+
+    
+    border-radius: 7px;
+    background-color: #fff;
+    border: 2px solid #222;
+}
+
+form textarea:focus{
+    outline-style: solid;
+    outline-color: #A435F0;
+    outline-width: 2px;
+    border-radius: 7px;
+
+    border: 1px solid #A435F0;
+    box-shadow: 1px 1px 3px #A435F0;
+}
