alterando layout curso-aprendizado

--- a/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.css
+++ b/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.css
@@ -1,3 +1,34 @@
-.tab{
-    color: pink;
+.container{
+    margin: 30px auto;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+div h3{
+    font-size: 30px;
+    font-weight: 600px;
+}
+
+.info-container{
+
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+div img{
+    width: 500px;
+}
+
+#titulo{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#conteudo{
+    font-size: 15px;
+    font-weight: 400;
 }
