--- a/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
+++ b/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
@@ -1,64 +1,24 @@
-<!-- <div class="aproveite">
-    <div class="seu-curso">
-        Continue estudando
-    </div>
-</div>
 
-<div *ngFor="let m of modulo" class="conteudo-principal">
-    
-    <div class="cont-curso">{{m.titulo}}</div>
-    <div class="cont-curso">{{m.conteudoPrincipal}}</div>
-    <img class="cont-curso" src="{{urlImagem}}{{m.imagem}}" alt="">
-    
-    <div class="cont-curso" class="video-curso">
-        <youtube-player 
-            videoId="{{m.videoId}}" 
-            suggestedQuality="highres" 
-            [height]="250" 
-            [width]="500" 
-            [startSeconds]="4"
-            [endSeconds]="8">
-        </youtube-player>
-    </div>
-</div> -->
+<div *ngFor="let m of modulos" class="container">
+
+    <h3>{{m.titulo}}</h3>
+
+    <div class="sub-container">
+        <div class="cont-curso" class="video-container">
+            <youtube-player 
+                videoId="{{m.videoId}}" 
+                suggestedQuality="highres" 
+                [height]="400" 
+                [width]="800" 
+                [startSeconds]="4"
+                [endSeconds]="8">
+            </youtube-player>
+        </div>
+        <div class="info-container">
+            <div id="titulo" class="cont-curso">{{m.titulo}}</div>
+            <div id="conteudo" class="cont-curso">{{m.conteudoPrincipal}}</div>
+            <img class="cont-curso" src="{{urlImagem}}{{m.imagem}}" alt="">
+        </div>
+    </div>    
+</div>
 <!-- 9SGDpanrc8U -->
-
-
-
-<div class="container" *ngFor="let m of modulo">    
-    <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
-
-        <li [ngbNavItem]="1">
-            <a ngbNavLink>{{m.titulo}}</a>
-
-            <ng-template ngbNavContent>
-                <p>{{m.titulo}}</p>
-
-                <div class="video">
-                    <youtube-player 
-                        videoId="{{m.videoId}}" 
-                        suggestedQuality="highres" 
-                        [height]="250" 
-                        [width]="500" 
-                        [startSeconds]="4"
-                        [endSeconds]="8">
-                    </youtube-player>
-                </div>
-
-                <section>
-                    <div class="cont-curso">{{m.conteudoPrincipal}}</div>
-                    <img class="cont-curso" src="{{urlImagem}}{{m.imagem}}" alt="">
-                </section>
-            </ng-template>
-        </li>
-        <li [ngbNavItem]="2">
-            <a ngbNavLink>Adicione vídeos</a>
-
-            <ng-template ngbNavContent>
-                <p>Tenha o id do vídeo que você deseja adicionar ao seu curso na hora de cadastrá-lo, e deixe que nós fazemos o resto</p>
-            </ng-template>
-        </li>
-    
-    </ul>
-  <div [ngbNavOutlet]="nav" class="mt-2"></div>
-</div>
