Refatorando lógica da funcionalidade de adicionar cursos ao pedido

--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="container-options">
     <mat-icon [routerLink]="['/usuario-details']" class="icon">person</mat-icon>
-    <mat-icon [routerLink]="['/aprendizado']" class="icon">menu_book</mat-icon>
+    <mat-icon [routerLink]="['/aprendizado']" class="icon" (click)="emitirClickBook()">menu_book</mat-icon>
     <mat-icon [routerLink]="['/wl']" class="icon" (click)="emitirClickWish()">favorite_border</mat-icon>
     <mat-icon [routerLink]="['/carrinho']" class="icon">shopping_cart</mat-icon>
     <mat-icon [routerLink]="['/']" class="icon" (click)="logoutUsuario()">logout</mat-icon>
