--- a/src/app/components/entidades/usuario-details/usuario-details.component.html
+++ b/src/app/components/entidades/usuario-details/usuario-details.component.html
@@ -2,8 +2,8 @@
     <div class="profile">
       <div class="links">
         <img src="{{urlImagem}}{{usuario.imagem}}" class="rounded-circle" alt="...">
-        <button id="btn-pedido" type="button" class="btn" [routerLink]="['/ensine-conosco']">Ensine conosco</button>
-        <button id="btn-pedido" type="button" class="btn" [routerLink]="['/professor-plataforma']">Plataforma professor</button>
+        <button *ngIf="!isProfessor" id="btn-pedido" type="button" class="btn" [routerLink]="['/ensine-conosco']">Ensine conosco</button>
+        <button *ngIf="isProfessor" id="btn-pedido" type="button" class="btn" [routerLink]="['/professor-plataforma']">Plataforma professor</button>
       </div>
       
       <ul class="list-group">
