--- a/src/app/components/entidades/professor-plataforma/professor-plataforma.component.html
+++ b/src/app/components/entidades/professor-plataforma/professor-plataforma.component.html
@@ -16,6 +16,11 @@
               <h5 class="card-title"  [routerLink]="['/curso-aprendizado']">{{curso.titulo}}</h5>
               <p class="card-text">{{curso.descricao}}</p>
             </div>
+
+            <div class="tools">
+                <mat-icon [routerLink]="['/professor-details']" class="icon">delete</mat-icon>
+                <mat-icon [routerLink]="['/professor-details']" class="icon">edit</mat-icon>
+            </div>
   
           </div>
   
