--- a/src/app/components/entidades/professor-plataforma/professor-plataforma.component.css
+++ b/src/app/components/entidades/professor-plataforma/professor-plataforma.component.css
@@ -6,6 +6,7 @@
 }
 
 .container{
+    margin: 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +32,9 @@ img{
     align-self: center;
 }
 button.btn {
-    width: 10vw;
+    width: 170px;
+
+    align-self: flex-start;
 
     border: 1px solid black;
 
@@ -39,7 +42,7 @@ button.btn {
     font-weight: 500;
 }
 
-div button.btn:hover {
+button.btn:hover {
     border: 1px solid #A435F0;
     background-color: #A435F0;
     color: #fff;
@@ -64,3 +67,14 @@ div button.btn:hover {
     padding-left: 0;
 }
 
+.tools{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.icon{
+    cursor: pointer;
+}
+.icon:hover{
+    color: #A435F0;
+}
