Implementando as rotas e guards para a plataforma do professor

--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar" *ngIf="onPlataforma">
   <div class="controller">
     <a class="navbar-brand" href="#">
       <img [routerLink]="['/']" src="assets\img\udeyou-logo.png" width="150" height="60" class="d-inline-block align-top" alt="">
