--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -38,7 +38,7 @@
 
         </div>
         <div class="controles">
-          <p class="link" [routerLink]="['/cursos']">Voltar</p>
+          <p class="link" [routerLink]="['/professor-plataformaz']">Voltar</p>
           <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/conteudo-curso']">Salvar</button>
         </div>
       </form>
