Layout da plataforma de professor

--- a/src/app/components/layout/home-plataforma/home-plataforma.component.html
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.html
@@ -6,7 +6,7 @@
             <li class="sidebar-brand">
             </li>
             <li>
-                <mat-icon [routerLink]="['/usuario-details']" class="icon">person</mat-icon>
+                <mat-icon [routerLink]="['/home-plataforma/usuario-details']" class="icon">person</mat-icon>
             </li>
             <li>
                 <a href="#">Shortcuts</a>
