--- a/src/app/components/layout/home-plataforma/home-plataforma.component.html
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.html
@@ -9,10 +9,10 @@
                 <mat-icon [routerLink]="['/home-plataforma/usuario-details']" class="icon">person</mat-icon>
             </li>
             <li>
-                <a href="#">Shortcuts</a>
+                <a [routerLink]="['/home-plataforma']">Home</a>
             </li>
             <li>
-                <a href="#">Overview</a>
+                <a [routerLink]="['/home-plataforma/cursos']">Cursos</a>
             </li>
             <li>
                 <a href="#">Events</a>
