Layout do main da plataforma

--- a/src/app/components/plataforma/main-plataforma/main-plataforma.component.html
+++ b/src/app/components/plataforma/main-plataforma/main-plataforma.component.html
@@ -1,1 +1,10 @@
-<p>main-plataforma works!</p>
+<div class="container-manage">
+    <div class="manage-courses">
+        <div class="manage-text">
+            Gerenciar seus cursos
+        </div>
+        <div class="gerenciar-cursos">
+            <button class="btn" id="btn-pedido" [routerLink]="['/home-plataforma/cursos']">Leve-me até lá</button>
+        </div>
+    </div>
+</div>
