Main da plataforma implementada

--- a/src/app/components/plataforma/main-plataforma/main-plataforma.component.html
+++ b/src/app/components/plataforma/main-plataforma/main-plataforma.component.html
@@ -7,4 +7,40 @@
             <button class="btn" id="btn-pedido" [routerLink]="['/home-plataforma/cursos']">Leve-me até lá</button>
         </div>
     </div>
+
+    <div class="manage-courses-second">
+        <div class="manage-text-us">
+            Nós da Udeyou incentivamos seriamente que você invista em inserir pessoas que não têm condições de estudar os cursos da plataforma em sua comunidade, por meio de subsídios para tal
+        </div>
+        <div class="gerenciar-cursos">
+            <button class="btn" id="btn-pedido" [routerLink]="['/home-plataforma/cursos']">Conheça os incentivos</button>
+        </div>
+    </div>
+
+    <div class="side-side">
+        <div class="side-e">
+            <div class="manage-text-mid">
+                Inspire alunos <br> de baixa renda
+            </div>
+            <div class="gerenciar-cursos">
+                <img src="assets\img\build-audience.jpg" alt="">
+            </div>
+        </div>
+    
+        <div class="side-d">
+            <div class="gerenciar-cursos">
+                <img src="assets\img\newcomer-challenge.jpg" alt="">
+            </div>
+            <div class="manage-text-mid">
+                Transforme a vida <br> de quem precisa
+            </div>
+        </div>
+    </div>
+
+    <div class="manage-courses">
+        <img src="assets\img\video-creation.jpg" alt="">
+        <div class="manage-text">
+            Cative sua comunidade
+        </div>
+    </div>
 </div>
