--- a/src/app/components/plataforma/main-plataforma/main-plataforma.component.css
+++ b/src/app/components/plataforma/main-plataforma/main-plataforma.component.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .manage-courses {
@@ -42,4 +43,63 @@
     border: #111;
     background-color: #8710D8;
     font-weight: 600;
+}
+
+.side-side {
+    margin-top: 100px;
+    width: 1000px;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.side-e, .side-d {
+    width: 340px;
+    height: 150px;
+    box-shadow: 0px 0px 2px #999;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.side-e {
+    margin-right: 10px;
+}
+
+.side-d {
+    margin-left: 10px;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+}
+
+.manage-text-mid {
+    font-family: 'Montserrat';
+    font-size: 15px;
+    margin: 10px;
+}
+
+.manage-text-us {
+    font-family: 'Montserrat';
+    font-size: 18px;
+    line-height: 30px;
+}
+
+.manage-courses-second {
+    margin-top: 100px;
+    width: 700px;
+    height: 200px;
+    box-shadow: 0px 0px 2px #999;
+    padding: 20px;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+
 }
