Ícones da side bar da plataforma implementados

--- a/src/app/components/layout/home-plataforma/home-plataforma.component.html
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.html
@@ -9,22 +9,10 @@
                 <mat-icon [routerLink]="['/home-plataforma/professor']" class="icon">person</mat-icon>
             </li>
             <li>
-                <a [routerLink]="['/home-plataforma']">Home</a>
+                <mat-icon [routerLink]="['/home-plataforma']" class="icon">home</mat-icon>
             </li>
             <li>
-                <a [routerLink]="['/home-plataforma/cursos']">Cursos</a>
-            </li>
-            <li>
-                <a href="#">Events</a>
-            </li>
-            <li>
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#">Services</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
+                <mat-icon [routerLink]="['/home-plataforma/cursos']" class="icon">auto_stories</mat-icon>                
             </li>
         </ul>
     </div>
