Mais melhorias no layout da sidebar

--- a/src/app/components/layout/home-plataforma/home-plataforma.component.html
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.html
@@ -6,13 +6,16 @@
             <li class="sidebar-brand">
             </li>
             <li>
-                <mat-icon [routerLink]="['/home-plataforma/professor']" class="icon">person</mat-icon>
-            </li>
-            <li>
                 <mat-icon [routerLink]="['/home-plataforma']" class="icon">home</mat-icon>
             </li>
             <li>
+                <mat-icon [routerLink]="['/home-plataforma/professor']" class="icon">person</mat-icon>
+            </li>
+            <li>
                 <mat-icon [routerLink]="['/home-plataforma/cursos']" class="icon">auto_stories</mat-icon>                
+            </li>
+            <li>
+                <mat-icon [routerLink]="['/']" class="icon">logout</mat-icon>                
             </li>
         </ul>
     </div>
