--- a/src/app/components/layout/home-plataforma/home-plataforma.component.css
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.css
@@ -101,9 +101,18 @@
 }
 
 .icon{
+    font-size: 35px;
+    margin-top: 10px;
     color: white;
     cursor: pointer;
-    margin-right: 20px;
+    
+}
+
+li {
+    margin-left: 10px;
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
 }
 
 .icon:hover{
