Implementada a funcionalidade de entrar na plataforma ao se cadastrar como professor

--- a/src/app/components/entidades/professor-formulario/professor-formulario.component.html
+++ b/src/app/components/entidades/professor-formulario/professor-formulario.component.html
@@ -1,6 +1,6 @@
   <div class="container">
     <div class="sub-container">
-      <h5>Adicionar professor</h5>
+      <h5>Torne-se um professor</h5>
       <div class="form-curso">
         <form>
           <div class="inputs">
