--- a/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
+++ b/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <form (submit)="envioFormulario()">
       <h5>Alterar curso</h5>
       <label>
@@ -18,5 +18,54 @@
           <button type="submit" class="btn">Salvar</button>
       </div>
   </form>
+  </div> -->
+  
+  <div class="container">
+    <div class="sub-container">
+      <h5>Alterar curso {{curso.titulo}}</h5>
+      <div class="form-curso">
+        <form>
+          <div class="inputs">
+            <label>
+              Titulo:
+              <input type="text" name="titulo" id="titulo" placeholder="" [(ngModel)]="titulo">
+            </label>
+  
+            <label>
+              Resumo:
+              <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="resumo">
+            </label>
+  
+            <label>
+              Descricao:
+              <textarea class="form-control" name="requisitos" id="exampleFormControlTextarea1" [(ngModel)] = "descricao" rows="4"></textarea>
+            </label>
+  
+            <label>
+              Requisitos:
+              <textarea class="form-control" name = "requisitos" id="exampleFormControlTextarea1" [(ngModel)] = "requisitos" rows="2"></textarea>
+            </label>
+  
+  
+            <div class="custom-file">
+              Foto:
+              <input id="customFile" type="file" class="custom-file-input" id="customFile" (change)="arquivoSelecionado($event)">
+              <label class="custom-file-label" for="customFile">foto</label>
+            </div>
+  
+            <label>
+              Valor:
+              <input type="number" name="valor" id="valor" placeholder="" [(ngModel)]="valor">
+            </label>
+  
+          </div>
+          <div class="controles">
+            <p class="link" [routerLink]="['/professor-plataformaz']">Voltar</p>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/cursos']">Salvar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  
   </div>
   
