Adicionando outro atributo de texto no curso modulo

--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -10,9 +10,14 @@
             </label>
   
             <label>
-              Conteúdo Principal:
+              Conteúdo:
               <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="conteudoPrincipal">
-            </label>  
+            </label>
+            
+            <label>
+              Conteúdo:
+              <input type="text" name="resumo" id="resumo" placeholder="" [(ngModel)]="conteudoPrincipalDois">
+            </label>
 
             <label>
               ID vídeo do youtube:
