--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -32,8 +32,8 @@
   
           </div>
           <div class="controles">
-            <p class="link" [routerLink]="['/cursos']">Voltar</p>
-            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/cursos']">Salvar</button>
+            <p class="link" [routerLink]="['/home-plataforma/cursos']">Voltar</p>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/cursos']">Salvar</button>
           </div>
         </form>
       </div>
