--- a/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
+++ b/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
@@ -1,25 +1,3 @@
-<!-- <div class="container">
-    <form (submit)="envioFormulario()">
-      <h5>Alterar curso</h5>
-      <label>
-          Titulo:
-          <input type="text" name="novoTitulo" id="titulo" placeholder="" [(ngModel)]="novoTitulo">
-      </label>
-      <label>
-          Descricao:
-          <input type="text" name="novaDescricao" id="descricao" placeholder="" [(ngModel)]="novaDescricao">
-      </label>
-      <label>
-          Valor:
-          <input type="number" name="novoValor" id="valor" placeholder="" [(ngModel)]="novoValor">
-      </label>
-      <div class="controles">      
-          <p class="link" [routerLink]="['/cursos']">Voltar</p>
-          <button type="submit" class="btn">Salvar</button>
-      </div>
-  </form>
-  </div> -->
-  
   <div class="container">
     <div class="sub-container">
       <h5>Alterar curso {{curso.titulo}}</h5>
@@ -61,7 +39,7 @@
           </div>
           <div class="controles">
             <p class="link" [routerLink]="['/professor-plataformaz']">Voltar</p>
-            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/cursos']">Salvar</button>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()">Salvar</button>
           </div>
         </form>
       </div>
