Mais implementações da funcionalidade de add modulos

--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.html
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.html
@@ -1,1 +1,5 @@
-<p>adicionando-modulos works!</p>
+<div class="add">
+    <div class="add-text">
+        Adicione módulos ao curso {{curso.titulo}}
+    </div>
+</div>
