--- a/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.html
+++ b/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.html
@@ -17,6 +17,8 @@
             <div class="infos">
               <h5 class="card-title" [routerLink]="['/home-plataforma/adicionando-modulos']">{{curso.titulo}}</h5>
               <p class="card-text">{{curso.descricao}}</p>
+              <p class="card-text">{{curso.requisitos}}</p>
+              <p class="card-text">{{curso.valor}}</p>
             </div>
   
             <div class="tools">
