Levando o curso para o componente adicionando-modulos

--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.html
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.html
@@ -1,5 +1,5 @@
 <div class="add">
     <div class="add-text">
-        Adicione módulos ao curso {{curso.titulo}}
+        Adicione módulos ao curso <b>{{curso.titulo}}</b>
     </div>
 </div>
