--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -39,7 +39,7 @@
         </div>
         <div class="controles">
           <p class="link" [routerLink]="['/professor-plataformaz']">Voltar</p>
-          <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/cursos']">Salvar</button>
+          <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma']">Salvar</button>
         </div>
       </form>
     </div>
